change overflow to prevent scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  overflow: hidden;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
 }
@@ -64,6 +65,12 @@ body {
   opacity: 0;
   transition: opacity 0.5s linear;
   max-width: 500px;
+  overflow: visible;
+}
+
+#content-top > *,
+#content-bottom > * {
+  overflow: visible;
 }
 
 #content-top {
